--- a/home.html
+++ b/home.html
@@ -158,7 +158,8 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-key"></i></div>
               <h4 class="title"><a href="">Land Survey</a></h4>
-              <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
+              <p class="description">We will do sureveying and responsible for preparing sites for construction and providing data on measurements to establish property boundaries.</p>
+              <p>Researching legal documents, survey records, and land titles to clarify information about property boundaries.</p>
             </div>
           </div>
 
@@ -391,7 +392,7 @@
                           </ul>
                         </div>
                         <div class="price">
-                            <h4>&#8377;20,000</h4>
+                            <h4>&#8377;4.0 Lakh</h4>
                         </div>
                         <a href="#contact"><button class="btn btn-block btn-outline-primary" type="submit">Get Quote</button></a>
                     </div>
@@ -412,7 +413,7 @@
                           </ul>
                         </div>
                         <div class="price">
-                            <h4>&#8377;30,000</h4>
+                            <h4>&#8377;5.0 Lakh</h4>
                         </div>
                         <a href="#contact">
                         <button class="btn btn-block btn-primary" type="submit">Get Quote</button></a>
@@ -433,7 +434,7 @@
                             </ul>
                         </div>
                         <div class="price">
-                            <h4>&#8377;45,000</h4>
+                            <h4>&#8377;5.0Lakh</h4>
                         </div>
                         <a href="#contact"><button class="btn btn-block btn-outline-primary" type="submit">Get Quote</button></a>
                     </div>
