--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#portfolio">Projects</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
+          <!-- <li><a href="gallery.html">Gallery</a></li> -->
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Our Team</a></li>
           <li><a href="#contact">Contact</a></li>
