--- a/home.html
+++ b/home.html
@@ -360,24 +360,24 @@
             <p>I chose Interior Design because of their superior range of design capabilities and their insightful
               advice during space planning. Their knowledge, experience, and attention to detail have proven invaluable
               to me in creating a finished project.</p>
-            <h3>Name</h3>
-            <h4>Designation</h4>
+            <!-- <h3>Name</h3>
+            <h4>Designation</h4> -->
           </div>
 
           <div class="testimonial-item">
             <p>Your studio was highly recommended to me. The sensitivity, knowledge, vision and ultimate execution your
               team brought to the table was tremendous. The renovation of my home could not be the success it has become
               without your involvement.</p>
-            <h3>Name</h3>
-            <h4>Designation</h4>
+            <!-- <h3>Name</h3>
+            <h4>Designation</h4> -->
           </div>
 
           <div class="testimonial-item">
             <p>This studio’s professional guidance gave me results that far exceeded my expectations. My clients
               thoroughly enjoy the fun, relaxing ambiance that the interior design creates. Their amazement began at the
               opening and have not ceased yet.</p>
-            <h3>Name</h3>
-            <h4>Designation</h4>
+            <!-- <h3>Name</h3>
+            <h4>Designation</h4> -->
           </div>
 
           <!--<div class="testimonial-item">
