view more added

--- a/home.html
+++ b/home.html
@@ -266,7 +266,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="portfolio-item wow fadeInUp galley-item">
               <a href="gallery.html#project3">
-                <img src="img/gallery/Project3/1.jpeg" alt=""class="gallery-photo" >
+                <img src="img/gallery/Project3/1.jpeg" alt="" class="gallery-photo">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
                     <h2 class="wow fadeInUp">Office Interior</h2>
@@ -289,59 +289,9 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/guestbedroom1.JPG" class="portfolio-popup">
-                <img src="img/portfolio/guestbedroom1.JPG" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Name</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/4floorhall.JPG" class="portfolio-popup">
-                <img src="img/portfolio/4floorhall.JPG" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Name </h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/7.jpg" class="portfolio-popup">
-                <img src="img/portfolio/7.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Name </h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="portfolio-item wow fadeInUp">
-              <a href="img/portfolio/8.jpg" class="portfolio-popup">
-                <img src="img/portfolio/8.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Name</h2>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div> -->
 
         </div>
+        <a type="submit" href="gallery.html" class="pull-right viewmore-css">View More</a><br />
 
       </div>
     </section>
