--- a/gallery.html
+++ b/gallery.html
@@ -145,7 +145,7 @@
     <section id="#project2">
         <section id="portfolio">
             <div class="gallery-project-header">
-                <label>2 BHK Full furnished House</label>
+                <label>Fully Furnished House</label>
 
             </div>
             <div class="container-fluid">
@@ -216,6 +216,13 @@
             </div>
             <div class="container-fluid">
                 <div class="row no-gutters">
+                    <div class="col-lg-3 col-md-4">
+                        <div class="portfolio-item galley-item">
+                            <a href="img/gallery/Project3/team.jpg" class="portfolio-popup">
+                                <img src="img/gallery/Project3/team.jpg" alt="" class="gallery-photo">
+                            </a>
+                        </div>
+                    </div>
                     <div class="col-lg-3 col-md-4">
                         <div class="portfolio-item galley-item">
                             <a href="img/gallery/Project3/1.jpeg" class="portfolio-popup">
@@ -290,7 +297,20 @@
                             </a>
                         </div>
                     </div>
-
+                    <div class="col-lg-3 col-md-4">
+                        <div class="portfolio-item galley-item">
+                            <a href="img/gallery/Project4/6.jpg" class="portfolio-popup">
+                                <img src="img/gallery/Project4/6.jpg" alt="" class="gallery-photo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-4">
+                        <div class="portfolio-item galley-item">
+                            <a href="img/gallery/Project4/7.jpg" class="portfolio-popup">
+                                <img src="img/gallery/Project4/7.jpg" alt="" class="gallery-photo">
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
