--- a/home.html
+++ b/home.html
@@ -256,7 +256,7 @@
                 <img src="img/gallery/Project2/1.jpg" alt="" class="gallery-photo">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">2 BHK Full furnished House</h2>
+                    <h2 class="wow fadeInUp">Fully Furnished House</h2>
                   </div>
                 </div>
               </a>
@@ -365,7 +365,7 @@
               <div class="heading">
                 <h3>RESIDENTIAL</h3>
               </div>
-              <p>Full Interior Project keeping your Basic requirements in mind. Minimal yet functional design . Colour ,
+              <p>Full Interior Project keeping your Basic requirements in mind. Minimal yet functional design. Colour,
                 theme and designs can be customised.</p>
               <div class="features">
                 <ul class="list">
@@ -375,9 +375,9 @@
                   <li>Online Consultation</li>
                 </ul>
               </div>
-              <div class="price">
+              <!-- <div class="price">
                 <h4>&#8377;4.0 Lakh</h4>
-              </div>
+              </div> -->
               <a href="#contact"><button class="btn btn-block btn-outline-primary" type="submit">Get Quote</button></a>
             </div>
           </div>
@@ -387,7 +387,7 @@
               <div class="heading">
                 <h3>COMMERCIAL</h3>
               </div>
-              <p>Full Interior Projects including soft furnishing and Loose furnitures . Fully customised design
+              <p>Full Interior Projects including soft furnishing and Loose furnitures. Fully customised design
                 according to your requirement.</p>
               <div class="features">
                 <ul class="list">
@@ -397,9 +397,9 @@
                   <li>Online Consultation</li>
                 </ul>
               </div>
-              <div class="price">
+              <!-- <div class="price">
                 <h4>&#8377;5.0 Lakh</h4>
-              </div>
+              </div> -->
               <a href="#contact">
                 <button class="btn btn-block btn-primary" type="submit">Get Quote</button></a>
             </div>
@@ -410,6 +410,7 @@
                 <h3>PROFESSIONAL</h3>
               </div>
               <p>Fully customised projects keeping all the requirements in mind of a luxury lifestyle.</p>
+              <br>
               <div class="features">
                 <ul class="list">
                   <li><span>Interior Design</span></li>
@@ -418,9 +419,9 @@
                   <li>Online Consultation</li>
                 </ul>
               </div>
-              <div class="price">
+              <!-- <div class="price">
                 <h4>&#8377;6.0 Lakh</h4>
-              </div>
+              </div> -->
               <a href="#contact"><button class="btn btn-block btn-outline-primary" type="submit">Get Quote</button></a>
             </div>
           </div>
@@ -439,7 +440,23 @@
         <div class="row justify-content-center">
           <div class="col-lg-3 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/sharief.jpeg" alt=""></div>
+              <div class="pic"><img src="img/harish.jpg" alt=""></div>
+              <div class="details">
+                <h4>B. Harish</h4>
+                <span>M.Tech(Str.), Interior Designer</span>
+                <!-- <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+           <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/sharief4.jpeg" alt=""></div>
               <div class="details">
                 <h4>MD Sharief</h4>
                 <span>M.Tech(Str.), Interior Designer</span>
@@ -451,22 +468,7 @@
                 </div>-->
               </div>
             </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/harish.jpg" alt=""></div>
-              <div class="details">
-                <h4>B. Harish</h4>
-                <span>M.Tech(Str.), Interior Designer</span>
-                <!--<div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>-->
-              </div>
-            </div>
+          
           </div>
 
         </div>
@@ -491,12 +493,13 @@
               <address>#2-11-194, 2nd Floor, Opp: Kanakadurga Homes, Gopalpur Circle, Hanamkonda.</address>
             </div>
             <div class="contact-phone">
-              <i class="ion-ios-telephone-outline"></i>
+              <a href="tel:+91 9908098823"> <i class="ion-ios-telephone-outline"></i></a>
               <h3>Phone Number</h3>
               <p><a href="tel:+91 9908098823">+91 9908098823, 9550294428</a></p>
             </div>
             <div class="contact-email">
-              <i class="ion-ios-email-outline"></i>
+              <a href="mailto:rsassociates2020.rs@gmail.com">
+                <i class="ion-ios-email-outline"></i></a>
               <h3>Email</h3>
               <p><a href="mailto:rsassociates2020.rs@gmail.com">rsassociates2020.rs@gmail.com</a></p>
             </div>
@@ -554,7 +557,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <a href="index.html">RS Associates</a>. All Rights Reserved
+        &copy; Copyright <a href="home.html">RS Associates</a>. All Rights Reserved
       </div>
       <!--<div class="credits"> 
         Template by <a href="https://webthemez.com/consulting/">RS Associates</a>
