renamed home to index.html

--- a/gallery.html
+++ b/gallery.html
@@ -63,18 +63,18 @@
         	<span><i class="fa fa-align-center"></i></span>  
         	<a href="#body" class="scrollto"> HOUSING</a>
         </h1>-->
-                <a href="home.html"><img src="img/rslogo.png" alt="" title="" /></a>
+                <a href="index.html"><img src="img/rslogo.png" alt="" title="" /></a>
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="home.html#body">Home</a></li>
-                    <li><a href="home.html#services">Services</a></li>
-                    <li><a href="home.html#about">About Us</a></li>
-                    <li><a href="home.html#portfolio">Projects</a></li>
+                    <li class="menu-active"><a href="index.html#body">Home</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="index.html#about">About Us</a></li>
+                    <li><a href="index.html#portfolio">Projects</a></li>
                     <!-- <li><a href="gallery.html">Gallery</a></li> -->
-                    <li><a href="home.html#pricing">Pricing</a></li>
-                    <li><a href="home.html#team">Our Team</a></li>
-                    <li><a href="home.html#contact">Contact</a></li>
+                    <li><a href="index.html#pricing">Pricing</a></li>
+                    <li><a href="index.html#team">Our Team</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
