--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         	<span><i class="fa fa-align-center"></i></span>  
         	<a href="#body" class="scrollto"> HOUSING</a>
         </h1>-->
-        <a href="home.html"><img src="img/rslogo.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/rslogo.png" alt="" title="" /></a>
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
@@ -557,7 +557,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <a href="home.html">RS Associates</a>. All Rights Reserved
+        &copy; Copyright <a href="index.html">RS Associates</a>. All Rights Reserved
       </div>
       <!--<div class="credits"> 
         Template by <a href="https://webthemez.com/consulting/">RS Associates</a>
