--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>RS Associates</title>
+  <title>RS Associates - Interior Designers Hanamkonda</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="Interior Designs, Construction, Layout, Drawings, Hanamkonda, Warangal, Best Interiors, RS Associates, sharief, harish" name="keywords">
+  <meta content="RS Associates - Interior Designers Hanamkonda - Best Interior designs available to guide our clients through the flawless and timely execution of any residential design project" name="description">
   <meta content="Author" name="WebThemez">
   <!-- Favicons -->
   <!--<link href="img/favicon.png" rel="icon">-->
